--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,17 +1,17 @@
 // Add your dependencies here
 
 dependencies {
-    compile("com.github.GTNewHorizons:GT5-Unofficial:5.09.40.31:dev")
+    compile("com.github.GTNewHorizons:GT5-Unofficial:5.09.40.32:dev")
     compile("com.github.GTNewHorizons:StructureLib:1.0.15:dev") 
-    compile("com.github.GTNewHorizons:NotEnoughItems:2.2.5-GTNH:dev")
+    compile("com.github.GTNewHorizons:NotEnoughItems:2.2.6-GTNH:dev") 
     compile("com.github.GTNewHorizons:CodeChickenCore:1.1.3:dev")
-    compile("com.github.GTNewHorizons:CodeChickenLib:1.1.5.1:dev")
+    compile("com.github.GTNewHorizons:CodeChickenLib:1.1.5.3:dev")
     compile("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev")
 
     compile("curse.maven:cofh-core-69162:2388751")
     compile("curse.maven:advsolar-362768:2885953")
 
-    compileOnly("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-70-GTNH:dev") {
+    compileOnly("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-75-GTNH:dev") {
         transitive = false
     }
     compileOnly("com.github.GTNewHorizons:Baubles:1.0.1.14:dev") {
@@ -20,10 +20,10 @@ dependencies {
     compileOnly("com.github.GTNewHorizons:ForestryMC:4.4.5:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:Railcraft:9.13.5:dev") {
+    compileOnly("com.github.GTNewHorizons:Railcraft:9.13.6:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:EnderIO:2.3.1.27:dev") {
+    compileOnly("com.github.GTNewHorizons:EnderIO:2.3.1.29:dev") {
         transitive = false
     }
     compileOnly("com.github.GTNewHorizons:EnderCore:0.2.6:dev") {
@@ -36,13 +36,13 @@ dependencies {
     compileOnly("player-api:PlayerAPI:1.7.10:1.4") {
         transitive = false
     }
-    compileOnly("com.mod-buildcraft:buildcraft:7.1.23:dev") {
+    compileOnly("com.github.GTNewHorizons:BuildCraft:7.1.26:dev") {
         transitive = false
     }
     compileOnly("thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:Chisel:2.10.6-GTNH:dev") {
+    compileOnly("com.github.GTNewHorizons:Chisel:2.10.8-GTNH:dev") {
         transitive = false
     }
 }
