--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,28 +1,14 @@
 // Add your dependencies here
 
 dependencies {
-    compile("com.github.GTNewHorizons:bartworks:master-SNAPSHOT:dev")
-    compile("com.github.GTNewHorizons:GTplusplus:master-SNAPSHOT:dev")
-    compile("com.github.GTNewHorizons:GT5-Unofficial:master-SNAPSHOT:dev")
-    compile("com.github.GTNewHorizons:NewHorizonsCoreMod:master-SNAPSHOT:dev")
+    compile('com.github.GTNewHorizons:GT5-Unofficial:5.09.40.33:dev')
 
-    compileOnly("com.github.GTNewHorizons:VisualProspecting:master-SNAPSHOT:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:ForestryMC:master-SNAPSHOT:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:Railcraft:master-SNAPSHOT:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:EnderIO:master-SNAPSHOT:dev") {
-        transitive = false
-    }
-
-    compileOnly("com.mod-buildcraft:buildcraft:7.1.23:dev") {
-        transitive = false
-    }
-    compileOnly("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev") {
-        transitive = false
-    }
+    compileOnly('com.github.GTNewHorizons:NewHorizonsCoreMod:1.9.20:dev')
+    compileOnly('com.github.GTNewHorizons:bartworks:0.5.36:dev')
+    compileOnly('com.github.GTNewHorizons:GTplusplus:1.7.27:dev')
+    compileOnly('com.github.GTNewHorizons:VisualProspecting:1.0.27b:dev') {transitive=false}
+    compileOnly('com.github.GTNewHorizons:ForestryMC:4.4.5:dev') {transitive=false}
+    compileOnly('com.github.GTNewHorizons:Railcraft:9.13.6:dev') {transitive=false}
+    compileOnly('com.github.GTNewHorizons:EnderIO:2.3.1.29:dev') {transitive=false}
+    compileOnly('com.github.GTNewHorizons:BuildCraft:7.1.27:api') {transitive=false}
 }
