--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -3,6 +3,7 @@
 dependencies {
 	
     compile("com.github.GTNewHorizons:GT5-Unofficial:5.09.40.31:dev")
+	compile("com.github.GTNewHorizons:NewHorizonsCoreMod:1.9.20:dev")
     compile("com.github.GTNewHorizons:StructureLib:1.0.14:dev")
 
     compile("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev")
@@ -15,6 +16,7 @@ dependencies {
     compile("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-75-GTNH:dev")
 	
     compile("com.github.GTNewHorizons:bartworks:0.5.36:dev")
+	compile files('bartworks-1.7.10-0.5.34.dirty-dev.jar')
     compileOnly("com.github.GTNewHorizons:GTplusplus:1.7.27:dev") {
         transitive = false
     }
@@ -29,7 +31,7 @@ dependencies {
     compileOnly("com.github.GTNewHorizons:EnderIO:2.3.1.28:dev") {
         transitive = false
     }
-    compileOnly("com.github.GTNewHorizons:BuildCraft:7.1.24:dev") {
+    compile("com.github.GTNewHorizons:BuildCraft:7.1.24:dev") {
         transitive = false
     }
 	
