--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,48 +1,26 @@
 // Add your dependencies here
 
 dependencies {
-    compile("com.github.GTNewHorizons:GT5-Unofficial:5.09.40.32:dev")
-    compile("com.github.GTNewHorizons:StructureLib:1.0.15:dev") 
-    compile("com.github.GTNewHorizons:NotEnoughItems:2.2.6-GTNH:dev") 
-    compile("com.github.GTNewHorizons:CodeChickenCore:1.1.3:dev")
-    compile("com.github.GTNewHorizons:CodeChickenLib:1.1.5.3:dev")
-    compile("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev")
+    compile('com.github.GTNewHorizons:GT5-Unofficial:5.09.40.35:dev')
+    compile('com.github.GTNewHorizons:StructureLib:1.0.15:dev') 
+    compile('com.github.GTNewHorizons:NotEnoughItems:2.2.7-GTNH:dev') 
+    compile('com.github.GTNewHorizons:CodeChickenCore:1.1.4:dev')
+    compile('com.github.GTNewHorizons:CodeChickenLib:1.1.5.3:dev')
+    compile('net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev')
 
-    compile("curse.maven:cofh-core-69162:2388751")
-    compile("curse.maven:advsolar-362768:2885953")
+    compile('curse.maven:cofh-core-69162:2388751')
+    compile('curse.maven:advsolar-362768:2885953')
 
-    compileOnly("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-75-GTNH:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:Baubles:1.0.1.14:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:ForestryMC:4.4.5:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:Railcraft:9.13.6:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:EnderIO:2.3.1.29:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:EnderCore:0.2.6:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:SC2:2.0.1:dev") {
-        transitive = false
-    }
+    compileOnly('com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-77-GTNH:dev') {transitive=false}
+    compileOnly('com.github.GTNewHorizons:Baubles:1.0.1.14:dev') {transitive=false}
+    compileOnly('com.github.GTNewHorizons:ForestryMC:4.4.6:dev') {transitive=false}
+    compileOnly('com.github.GTNewHorizons:Railcraft:9.13.6:dev') {transitive=false}
+    compileOnly('com.github.GTNewHorizons:EnderIO:2.3.1.30:dev') {transitive=false}
+    compileOnly('com.github.GTNewHorizons:EnderCore:0.2.6:dev') {transitive=false}
+    compileOnly('com.github.GTNewHorizons:SC2:2.0.1:dev') {transitive=false}
 
-    compileOnly("player-api:PlayerAPI:1.7.10:1.4") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:BuildCraft:7.1.26:dev") {
-        transitive = false
-    }
-    compileOnly("thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:Chisel:2.10.8-GTNH:dev") {
-        transitive = false
-    }
+    compileOnly('player-api:PlayerAPI:1.7.10:1.4') {transitive=false}
+    compileOnly('com.github.GTNewHorizons:BuildCraft:7.1.27:dev') {transitive=false}
+    compileOnly('thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev') {transitive=false}
+    compileOnly('com.github.GTNewHorizons:Chisel:2.10.8-GTNH:dev') {transitive=false}
 }
