--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -3,6 +3,8 @@
 dependencies {
     compile 'com.github.GTNewHorizons:GT5-Unofficial:5.09.40.34:dev'
     compile 'com.github.GTNewHorizons:TecTech:5.0.5.1:dev'
+    compile 'com.github.GTNewHorizons:bartworks:0.5.39:dev'
+    compile 'com.github.GTNewHorizons:StructureLib:1.0.16:dev'
     compile 'com.github.GTNewHorizons:ThaumicTinkerer:2.6.3:dev'
 
     compile 'thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev'
