--- a/repositories.gradle
+++ b/repositories.gradle
@@ -1,51 +1,26 @@
 // Add any additional repositories for your dependencies here
 
 repositories {
-    jcenter()
-    maven { // EnderIO & EnderCore
-        name = 'tterrag Repo'
-        url = "http://maven.tterrag.com"
+    maven {
+        name 'GTNH Maven'
+        url 'http://jenkins.usrv.eu:8081/nexus/content/groups/public/'
+        allowInsecureProtocol
     }
     maven {
-        name = "CodeChicken"
-        url = "http://chickenbones.net/maven/"
-    }
-    maven {
-        name = "sponge"
-        url = "https://repo.spongepowered.org/repository/maven-public"
-    }
-    maven {
-        name = "ic2"
-        url = "https://maven.ic2.player.to/"
+        name 'ic2'
+        url 'https://maven.ic2.player.to/'
         metadataSources {
             mavenPom()
             artifact()
         }
     }
-	
-	maven {
-		url = "http://jenkins.usrv.eu:8081/nexus/content/groups/public/"
-	}
-	
     maven {
-        url "https://cursemaven.com"
+        url 'https://cursemaven.com'
+        content {
+            includeGroup "curse.maven"
+        }
     }
     maven {
-        url = "https://jitpack.io"
-    }
-    ivy {
-        name = "gtnh_download_source"
-        artifactPattern("http://downloads.gtnewhorizons.com/Mods_for_Jenkins/[module]-[revision].[ext]")
-    }
-    maven {
-        name = "UsrvDE/GTNH"
-        url = "http://jenkins.usrv.eu:8081/nexus/content/repositories/releases/"
-    }
-    maven {
-        name = "gt"
-        url = "https://gregtech.overminddl1.com/"
-    }
-    maven {
-        url = "http://www.ryanliptak.com/maven/"
+        url 'https://jitpack.io'
     }
 }
