--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -66,7 +66,7 @@ dependencies {
         transitive = false
     }
     annotationProcessor("com.google.auto.value:auto-value:1.8.2")
-    //runtime('com.github.GTNewHorizons:bartworks:0.5.36:dev') {
-    //    exclude group:'com.github.GTNewHorizons', module:'GT5-Unofficial'
-    //}
+
+    testImplementation(platform('org.junit:junit-bom:5.8.2'))
+    testImplementation('org.junit.jupiter:junit-jupiter')
 }
