--- a/repositories.gradle
+++ b/repositories.gradle
@@ -8,6 +8,13 @@ repositories {
     maven {
         name = "ic2"
         url = "https://maven.ic2.player.to/"
+        metadataSources {
+            mavenPom()
+            artifact()
+        }
+    }
+	    maven {
+        name = "ic2"
         url = "https://maven2.ic2.player.to/"
         metadataSources {
             mavenPom()
