--- a/repositories.gradle
+++ b/repositories.gradle
@@ -2,25 +2,26 @@
 
 repositories {
     maven {
-        name 'GTNH Maven'
-        url 'http://jenkins.usrv.eu:8081/nexus/content/groups/public/'
+        name = 'GTNH Maven'
+        url = 'http://jenkins.usrv.eu:8081/nexus/content/groups/public/'
         allowInsecureProtocol
     }
     maven {
-        name 'ic2'
-        url 'https://maven2.ic2.player.to/'
+        name = 'ic2'
+        url = 'https://maven.ic2.player.to/'
+        url ='https://maven2.ic2.player.to/'
         metadataSources {
             mavenPom()
             artifact()
         }
     }
     maven {
-        url 'https://cursemaven.com'
+        url = 'https://cursemaven.com'
         content {
             includeGroup 'curse.maven'
         }
     }
     maven {
-        url 'https://jitpack.io'
+        url = 'https://jitpack.io'
     }
 }
