--- a/repositories.gradle
+++ b/repositories.gradle
@@ -14,6 +14,15 @@ repositories {
             artifact()
         }
     }
+        }
+    maven {
+        name 'ic2'
+        url 'https://maven2.ic2.player.to/'
+        metadataSources {
+            mavenPom()
+            artifact()
+        }
+    }
     maven {
         url 'https://cursemaven.com'
         content {
