--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -19,6 +19,7 @@ dependencies {
     compileOnly('com.github.GTNewHorizons:EnderIO:2.3.1.30:dev') {transitive = false}
     compileOnly('com.github.GTNewHorizons:ExtraCells2:2.5.9:dev') {transitive = false}
     compileOnly('com.github.GTNewHorizons:BuildCraft:7.1.27:dev') {transitive = false}
+    compileOnly('com.github.GTNewHorizons:ThaumicEnergistics:1.3.16-GTNH:dev') {transitive =  false}
 
     runtime('com.github.GTNewHorizons:NewHorizonsCoreMod:1.9.20:dev')
     runtime('com.github.GTNewHorizons:ForestryMC:4.4.6:dev')
