--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,5 +1,3 @@
-// Add your dependencies here
-
 dependencies {
     compile('com.github.GTNewHorizons:GT5-Unofficial:5.09.40.47:dev')
     compile('com.github.GTNewHorizons:StructureLib:1.0.15:dev') 
@@ -18,6 +16,7 @@ dependencies {
     compileOnly('com.github.GTNewHorizons:EnderIO:2.3.1.30:dev') {transitive=false}
     compileOnly('com.github.GTNewHorizons:EnderCore:0.2.6:dev') {transitive=false}
     compileOnly('com.github.GTNewHorizons:SC2:2.0.1:dev') {transitive=false}
+    compileOnly('com.github.GTNewHorizons:Binnie:2.0.34:dev') {transitive = false}
 
     compileOnly('player-api:PlayerAPI:1.7.10:1.4') {transitive=false}
     compileOnly('com.github.GTNewHorizons:BuildCraft:7.1.27:dev') {transitive=false}
